syntax = "proto3";

package types;

option go_package = "github.com/vultisig/recipes/types";

// ConstraintType defines the type of constraint
enum ConstraintType {
  CONSTRAINT_TYPE_UNSPECIFIED = 0;
  CONSTRAINT_TYPE_FIXED = 1;
  CONSTRAINT_TYPE_MAX = 2;
  CONSTRAINT_TYPE_MIN = 3;
  CONSTRAINT_TYPE_MAGIC_CONSTANT = 4;
}

enum MagicConstant {
  UNSPECIFIED = 0;
  VULTISIG_TREASURY = 1;
}

// RangeValue represents a range constraint with min and max values
message RangeValue {
  string min = 1;
  string max = 2;
}

// WhitelistValues represents a list of allowed values
message WhitelistValues {
  repeated string values = 1;
}

// Constraint defines restrictions on a parameter
message Constraint {
  // Type of constraint (fixed, max, min, etc.)
  ConstraintType type = 1;

  // Value of the constraint (depends on Type)
  oneof value {
    string fixed_value = 2;
    string max_value = 3;
    string min_value = 4;
    MagicConstant magic_constant_value = 5;
  }

  // Additional metadata for the constraint
  string denominated_in = 6;
  string period = 7;
  bool required = 8;
}
